Fix: cleaned requirements and added pinecone-text

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,46 @@
 langchain
-python-dotenv
-ipykernel
 langchain-community
-pypdf
-bs4
-arxiv
-pymupdf
-wikipedia
-langchain-text-splitters
+langchain-core
 langchain-openai
-chromadb
-sentence_transformers
-langchain_huggingface
-faiss-cpu
-langchain_chroma
-duckdb
-pandas
-openai
+langchain-huggingface
+langchain-text-splitters
+langchain-chroma
 langchain-groq
-duckduckgo_search==5.3.1b1
+
+pinecone-client
+pinecone-text
+
+chromadb
+faiss-cpu
+
+huggingface_hub
+sentence-transformers
+
+pypdf
 pymupdf
-arxiv
+python-docx
+docx2txt
+bs4
 wikipedia
+arxiv
+unstructured
+youtube_transcript_api
+pytube
+
+duckduckgo_search==5.3.1b1
+validators==0.28.1
+
 mysql-connector-python
 SQLAlchemy
-validators==0.28.1
-youtube_transcript_api
-unstructured
-pytube
-numexpr
-huggingface_hub
-gradio
-neo4j
-python-docx
+
 flask
 flask-cors
+
+requests
+python-dotenv
+pandas
+numexpr
+neo4j
+gradio
+
+ipykernel
