--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,26 @@
-langchain
-langchain-community
-langchain-core
-langchain-openai
-langchain-huggingface
-langchain-text-splitters
-langchain-chroma
-langchain-groq
+# Ultra-minimal requirements for 512MB memory constraint
+python-dotenv==1.0.0
+requests==2.31.0
+pydantic==2.5.0
 
-nltk
+# Core LangChain (minimal)
+langchain-core==0.1.23
+langchain-groq==0.0.3
+langchain-community==0.0.13
 
-pinecone
-pinecone-text
+# Ultra-light embedding model
+sentence-transformers==2.2.2
+transformers==4.36.0
+torch==2.1.0 --index-url https://download.pytorch.org/whl/cpu
 
-chromadb
-faiss-cpu
+# Document processing (minimal)
+PyMuPDF==1.23.0
 
-huggingface_hub
-sentence-transformers
+# Text processing
+pinecone-text==0.7.1
 
-pypdf
-pymupdf
-python-docx
-docx2txt
+# Vector database
+pinecone-client==3.0.0
 
-unstructured
-
-
-
-
-validators==0.28.1
-
-
-
-
-flask
-flask-cors
-
-requests
-python-dotenv
-pandas
-numexpr
-
-
-
+# Hugging Face integration (minimal)
+langchain-huggingface==0.0.1
