--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,16 @@
-# Ultra-minimal requirements for 512MB memory constraint
-python-dotenv==1.0.0
-requests==2.31.0
-pydantic==2.5.0
+langchain-community
+langchain-core
+langchain-groq
+langchain-huggingface
+pinecone-text
+pinecone
 
-# Core LangChain (minimal)
-langchain-core==0.1.23
-langchain-groq==0.0.3
-langchain-community==0.0.13
+huggingface_hub
+sentence-transformers
 
-# Ultra-light embedding model
-sentence-transformers==2.2.2
-transformers==4.36.0
-torch==2.1.0 --index-url https://download.pytorch.org/whl/cpu
+pymupdf
+python-dotenv
+requests
 
-# Document processing (minimal)
-PyMuPDF==1.23.0
-
-# Text processing
-pinecone-text==0.7.1
-
-# Vector database
-pinecone-client==3.0.0
-
-# Hugging Face integration (minimal)
-langchain-huggingface==0.0.1
+flask
+flask-cors
