--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,45 @@
+langchain
 langchain-community
 langchain-core
-langchain-groq
+langchain-openai
 langchain-huggingface
-pinecone-text
+langchain-text-splitters
+langchain-chroma
+langchain-groq
+
+nltk
+
 pinecone
+pinecone-text
+
+chromadb
+faiss-cpu
 
 huggingface_hub
 sentence-transformers
 
+pypdf
 pymupdf
-python-dotenv
-requests
+python-docx
+docx2txt
+
+unstructured
+
+
+
+
+validators==0.28.1
+
+
+
 
 flask
 flask-cors
+
+requests
+python-dotenv
+pandas
+numexpr
+
+
+
